hphp/test/slow/enum_class/enum_class17.php.expectf
Fatal error: Generic type parameter does not resolve to a class in %s/enum_class/enum_class17.php on line 8
